--- a/templates/email/reporte_admin.html
+++ b/templates/email/reporte_admin.html
@@ -38,7 +38,7 @@
                         <th>C</th>
                         <th>R1</th>
                         <th>RC</th>
-                                <th>Actividad</th>
+                                <th>Actividad | Nota</th>
                         <th>Solicitante</th>
                     </tr>
                 </thead>
